--- a/src/index.css
+++ b/src/index.css
@@ -53,3 +53,11 @@ a:hover {
 	--off-white: #f5f5f5;
 	--black: rgb(20, 22, 26);
 }
+
+.light-mode {
+	--primary-color: #e8e2e2;
+	--secondary-color: #327f64;
+	--secondary-color-dark: #43c396;
+	--off-white: rgb(20, 22, 26);
+	--black: #d5e2dd;
+}
