--- a/src/index.css
+++ b/src/index.css
@@ -23,6 +23,14 @@ p {
 	color: var(--off-white);
 }
 
+button {
+	cursor: url("./images/ring-pointer.png"), auto;
+}
+
+input {
+	cursor: url("./images/ring-pointer.png"), auto;
+}
+
 svg:hover {
 	color: var(--secondary-color) !important;
 }
