--- a/src/Components/Pages/Projects/Projects.css
+++ b/src/Components/Pages/Projects/Projects.css
@@ -18,7 +18,7 @@
 }
 
 .ReactModal__Overlay {
-	background-color: var(--black) !important;
+	background-color: rgba(0, 0, 0, 0.75);
 }
 
 @media (max-width: 800px) {
