--- a/src/Components/UI/Project/ProjectCard/ProjectCard.css
+++ b/src/Components/UI/Project/ProjectCard/ProjectCard.css
@@ -4,7 +4,7 @@
 	overflow: auto;
 	margin-top: 20px !important;
 	box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.1);
-	background-color: var(--black);
+	background-color: transparent;
 }
 
 #MUI-Card:hover {
@@ -14,7 +14,7 @@
 #card-media {
 	width: 100%;
 	height: 250px;
-	cursor: url("../../../images/ring-pointer.png"), 4, 4 pointer !important;
+	cursor: url("../../../../images/ring-pointer.png"), 4, 4 pointer !important;
 }
 
 @media (max-width: 1300px) {
@@ -37,7 +37,7 @@
 
 	#card-media:hover {
 		opacity: 1;
-		cursor: url("../../../images/ring-pointer.png"), 4, 4 pointer !important;
+		cursor: url("../../../../images/ring-pointer.png"), 4, 4 pointer !important;
 	}
 
 	.card-content-text {
@@ -82,7 +82,7 @@
 		width: 100%;
 		height: 525px;
 		image-rendering: pixelated;
-		cursor: url("../../../images/ring-pointer.png"), 4, 4 pointer !important;
+		cursor: url("../../../../images/ring-pointer.png"), 4, 4 pointer !important;
 	}
 
 	.MuiCardHeader-title {
@@ -135,7 +135,7 @@
 		#card-media {
 			width: 1000px !important;
 			max-width: 100% !important;
-			cursor: url("../../../images/ring-pointer.png"), 4, 4 pointer !important;
+			cursor: url("../../../../images/ring-pointer.png"), 4, 4 pointer !important;
 		}
 	}
 }
