--- a/src/Components/Pages/Projects/Projects.css
+++ b/src/Components/Pages/Projects/Projects.css
@@ -2,7 +2,6 @@
 	text-align: center;
 	width: 100%;
 	user-select: none;
-
 	background: var(--black);
 }
 
@@ -22,8 +21,8 @@
 }
 
 @media (max-width: 800px) {
-	.project-icons {
-		display: none !important;
+	.projects-container {
+		display: none;
 	}
 }
 
