--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,7 @@ svg:hover {
 
 .App {
 	max-width: 100vw !important;
-	overflow-x: hidden;
+	overflow: hidden;
 	background-color: var(--black);
 	font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
 		Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
