update skill buttons and try to fix mobile background changing on nav enter or exit

--- a/src/App.css
+++ b/src/App.css
@@ -31,3 +31,11 @@ canvas {
 	top: 0;
 	left: 0;
 }
+.mobile-background {
+    background: url('./images/threeJS/space.jpeg') no-repeat center center fixed;
+    background-size: cover;
+ 
+}
+
+
+
