--- a/src/App.css
+++ b/src/App.css
@@ -32,5 +32,12 @@ canvas {
 	left: 0;
 }
 .mobile-background {
-	background: var(--black);
+	height: 100vh;
+	width: 100vw;
+	background-image: url("./images/threeJS/space.jpeg");
+	background-size: cover;
+	background-repeat: no-repeat;
+	background-position: center;
+	position: fixed;
+	overflow: show;
 }
