--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,4 @@
-h1 {
-	color: var(--off-white);
-}
-
+h1,
 p {
 	color: var(--off-white);
 }
@@ -31,6 +28,7 @@ canvas {
 	top: 0;
 	left: 0;
 }
+
 .mobile-background {
 	height: 100vh;
 	width: 100vw;
