--- a/src/index.css
+++ b/src/index.css
@@ -47,3 +47,13 @@ svg:hover {
 html {
 	scroll-behavior: smooth !important;
 }
+
+
+
+.fade-in-on-mount {
+	animation: fadeIn ease 1.5s;
+	-webkit-animation: fadeIn ease 1.5s;
+	-moz-animation: fadeIn ease 1.5s;
+	-o-animation: fadeIn ease 1.5s;
+	-ms-animation: fadeIn ease 1.5s;
+}
