--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,8 @@
 	background-color: var(--black);
 	font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
 		Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+	
+	text-wrap: balance;
 }
 
 .ContributionCalendar-label {
