--- a/src/index.css
+++ b/src/index.css
@@ -31,7 +31,16 @@ h6,
 p {
 	user-select: none;
 	color: var(--off-white);
-	text-wrap: balance;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6
+{
+text-wrap: balance;
 }
 
 iframe,
