--- a/src/Components/UI/Project/Project.css
+++ b/src/Components/UI/Project/Project.css
@@ -100,6 +100,8 @@
 		margin-left: 0px !important;
 		margin-right: 0px !important;
 		width: 100% !important;
+		max-width: 90vw;
+		width: 100%;
 		font-size: 1.2rem;
 		height: 100%;
 		min-height: 525px;
@@ -147,10 +149,6 @@
 		transition: transform 0.5s ease-in-out;
 		color: var(--secondary-color);
 		transform: translateY(-5px);
-	}
-
-	#MUI-Card:hover {
-		transform: scale(1);
 	}
 
 	@media (min-width: 1300px) {
