--- a/src/Components/UI/Project/Project.css
+++ b/src/Components/UI/Project/Project.css
@@ -58,6 +58,16 @@
 	margin-bottom: 40px;
 }
 
+
+@keyframes spin {
+	0% {
+		transform: rotate(0deg);
+	}
+	100% {
+		transform: rotate(360deg);
+	}
+}
+
 @media (max-width: 1300px) {
 	.card-title-div {
 		position: relative;
@@ -132,6 +142,10 @@
 		flex-direction: row;
 		justify-content: space-between;
 		align-items: space-around;
+	}
+
+	.hidden {
+		visibility: none;
 	}
 
 	.project-description {
